hphp/hack/test/ifc/check/tuple.php.exp
=== IFC analysis results for tuple.php
File "tuple.php", line 57, characters 3-21:
Data with policy `I` appears in context `PUBLIC`. (Typing[4379])
  File "tuple.php", line 7, characters 14-19:
  This may be the data source with policy `I`
  File "tuple.php", line 13, characters 21-44:
  This may be the data sink with policy `PUBLIC`
  File "tuple.php", line 56, characters 3-20:
  Another program point contributing to the illegal flow
File "tuple.php", line 65, characters 3-20:
Data with policy `I` appears in context `J`. (Typing[4379])
  File "tuple.php", line 7, characters 14-19:
  This may be the data source with policy `I`
  File "tuple.php", line 9, characters 14-19:
  This may be the data sink with policy `J`
  File "tuple.php", line 63, characters 3-26:
  Another program point contributing to the illegal flow
  File "tuple.php", line 64, characters 3-16:
  Another program point contributing to the illegal flow
File "tuple.php", line 39, characters 3-19:
Data with policy `J` appears in context `I`. (Typing[4379])
  File "tuple.php", line 9, characters 14-19:
  This may be the data source with policy `J`
  File "tuple.php", line 7, characters 14-19:
  This may be the data sink with policy `I`
  File "tuple.php", line 37, characters 3-32:
  Another program point contributing to the illegal flow
File "tuple.php", line 32, characters 3-20:
Data with policy `J` appears in context `I`. (Typing[4379])
  File "tuple.php", line 9, characters 14-19:
  This may be the data source with policy `J`
  File "tuple.php", line 7, characters 14-19:
  This may be the data sink with policy `I`
  File "tuple.php", line 30, characters 3-45:
  Another program point contributing to the illegal flow
File "tuple.php", line 47, characters 3-20:
Data with policy `J` appears in context `I`. (Typing[4379])
  File "tuple.php", line 9, characters 14-19:
  This may be the data source with policy `J`
  File "tuple.php", line 7, characters 14-19:
  This may be the data sink with policy `I`
  File "tuple.php", line 45, characters 3-20:
  Another program point contributing to the illegal flow
